header alignment fix

--- a/static/style.css
+++ b/static/style.css
@@ -50,6 +50,22 @@ h2 {
     font-size: x-large;
 }
 
+#bodytextthree {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 20px;
+    width: 70%;
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: x-large;
+}
+
 .bodytext {
     color: antiquewhite;
     margin-top: 30px;
